# univ

./: .gitignore  README.md
algorithms/lab1/: pom.xml
algorithms/lab2/: pom.xml
algorithms/lab3/: pom.xml
algorithms/lab4/: pom.xml
algorithms/lab5/: pom.xml
algorithms/lab6/: pom.xml
computational_geometry/lab/: canvas.js  geometry.js  index.html  point.js  styles.css
computer_graphics/Lab1/: canvas.js  geometry.js  index.html  styles.css
computer_graphics/Lab2/: canvas.js  chain.js  edge.js  geometry.js  index.html  node.js  point.js  styles.css
computer_graphics/Lab3/: canvas.js  edge.js  geometry.js  index.html  point.js
computer_graphics/Lab4/: canvas.js  geometry.js  index.html  point.js  styles.css
computer_graphics/Lab5/: canvas.js  geometry.js  point.js
computer_graphics/Lab5-6/: canvas.js  geometry.js  index.html  point.js  styles.css
computer_graphics/Lab7/: canvas.js  geometry.js  index.html  styles.css
cryptography/: README.md
cryptography/Lab1/: pom.xml
cryptography/Lab2/: CMakeLists.txt  main.cpp  rc5.hpp
cryptography/Lab2-java/: pom.xml
cryptography/Lab3/: pom.xml
database/lab1/: CMakeLists.txt  console_interface.c  console_interface.cpp  db.c  db.h  example.c  main.c
distributed_computing/Lab8/: .gitignore  CMakeLists.txt  README.md  main.cpp  parallel_fox.cpp  parallel_striped.cpp  serial.cpp  utils.hpp
django_webapp/: manage.py
inf_security/: des.py  in.txt  lab1.py  lab2.py  lab3.py  lab4.py
operating_systems/lab1/: CMakeLists.txt  main.cpp  tmp.hpp
operating_systems/lab1/src/: config.hpp  manager.cpp  manager.hpp  manager.hxx  worker.cpp
(+609 files in other folders)
